package it.unicam.cs.ids.hackhub.entity;

public enum StatoInvito {
    Pendente,
    Accettato,
    Rifiutato
}
