package it.unicam.cs.ids.hackhub.entity;

// Stato di RichiestaSupporto: enum semplice (NON pattern State; lo State resta sull'Hackathon).
public enum StatoRichiesta {
    Aperta,
    Gestita,
    Chiusa
}
